# esp-idf-matter

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/configs/: sdkconfig.defaults
.github/workflows/: ci.yml
examples/: light.rs  light_eth.rs  light_eth2.rs  light_thread.rs  light_wifi.rs
src/: ble.rs  error.rs  eth.rs  lib.rs  matter.rs  mdns.rs  multicast.rs  netif.rs  nvs.rs  persist.rs  stack.rs  thread.rs  udp.rs  wifi.rs  wireless.rs
src/stack/: eth.rs  netif.rs  persist.rs  wifible.rs
src/wifi/: comm.rs  diag.rs  mgmt.rs
src/wireless/: thread.rs  wifi.rs
