[package]
name = "esp-idf-matter"
version = "0.1.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["matter", "embedded", "esp-idf", "esp32"]
description = "Run rs-matter on Espressif chips with ESP IDF"
repository = "https://github.com/ivmarkov/esp-idf-matter"
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
#documentation = "https://docs.esp-rs.org/esp-idf-matter/"
rust-version = "1.77"

#[patch.'https://github.com/ivmarkov/async-io-mini']
#async-io-mini = { path = "../async-io-mini" }

[patch.crates-io]
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", branch = "gatt" }
#esp-idf-svc = { path = "../esp-idf-svc" }
rs-matter = { git = "https://github.com/ivmarkov/rs-matter", branch = "wifi" }
#rs-matter = { path = "../rs-matter/rs-matter" }
rs-matter-macros = { git = "https://github.com/ivmarkov/rs-matter", branch = "wifi" }
#rs-matter-macros = { path = "../rs-matter/rs-matter-macros" }
edge-nal = { git = "https://github.com/ivmarkov/edge-net" }
#edge-nal = { path = "../edge-net/edge-nal" }
edge-nal-std = { git = "https://github.com/ivmarkov/edge-net" }
#edge-nal-std = { path = "../edge-net/edge-nal-std" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
#default = ["rs-matter-stack"]
default = ["rs-matter-stack", "async-io-mini"]
rs-matter-stack = ["dep:rs-matter-stack", "std"]
async-io-mini = ["std", "edge-nal-std/async-io-mini"]
std = ["esp-idf-svc/std", "edge-nal-std"]
examples = ["default", "esp-idf-svc/binstart", "esp-idf-svc/critical-section"] # Enable only when building the examples

[dependencies]
log = { version = "0.4", default-features = false }
heapless = "0.8"
enumset = { version = "1", default-features = false }
scopeguard = { version = "1", default-features = false }
embassy-futures = "0.1"
embassy-sync = "0.5"
embassy-time = { version = "0.3", features = ["generic-queue"] }
esp-idf-svc = { version = "0.48", default-features = false, features = ["alloc", "embassy-sync", "embassy-time-driver", "experimental"] }
embedded-svc = { version = "0.27", default-features = false }
rs-matter = { version = "0.1", default-features = false, features = ["rustcrypto"] }
rs-matter-macros = "0.1"
async-io = { version = "=2.0.0", default-features = false } # Workaround for https://github.com/smol-rs/async-lock/issues/84
rs-matter-stack = { git = "https://github.com/ivmarkov/rs-matter-stack", default-features = false, features = ["std"], optional = true }
#rs-matter-stack = { path = "../rs-matter-stack", default-features = false, features = ["std"], optional = true }
edge-nal = "0.2"
edge-nal-std = { version = "0.2", default-features = false, optional = true }

[build-dependencies]
embuild = "0.31.3"

[dev-dependencies]
embassy-time = { version = "0.3", features = ["generic-queue"] }
static_cell = "2.1"
anyhow = "1"

[[example]]
name = "light"
path = "examples/light.rs"
required-features = ["examples"]

[[example]]
name = "light_eth"
path = "examples/light_eth.rs"
required-features = ["examples"]
