[package]
name = "esp-idf-matter"
version = "0.1.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["matter", "embedded", "esp-idf", "esp32"]
description = "Run rs-matter on Espressif chips with ESP IDF"
repository = "https://github.com/ivmarkov/esp-idf-matter"
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
rust-version = "1.78"

#[lib]
#harness = false

#[patch.'https://github.com/ivmarkov/async-io-mini']
#async-io-mini = { path = "../async-io-mini" }
#[patch.'https://github.com/ivmarkov/rs-matter-stack']
#rs-matter-stack = { git = "https://github.com/ivmarkov//rs-matter-stack.git" }
#rs-matter-stack = { path = "../rs-matter-stack" }

[patch.crates-io]
#rs-matter = { git = "https://github.com/project-chip/rs-matter" }
rs-matter = { git = "https://github.com/ivmarkov/rs-matter", branch = "next" }
#rs-matter = { path = "../rs-matter/rs-matter" }
#edge-nal = { git = "https://github.com/ivmarkov/edge-net" }
#edge-nal-std = { git = "https://github.com/ivmarkov/edge-net" }
#edge-mdns = { git = "https://github.com/ivmarkov/edge-net" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
#default = ["std", "log"]
default = ["std", "async-io-mini", "log"]
async-io-mini = ["std", "edge-nal-std/async-io-mini"]
std = ["esp-idf-svc/std", "edge-nal-std", "rs-matter-stack/std", "rs-matter-stack/log"]
log = ["rs-matter-stack/log"]
examples = ["default", "esp-idf-svc/binstart", "esp-idf-svc/critical-section"] # Enable only when building the examples

[dependencies]
log = { version = "0.4", default-features = false }
heapless = "0.8"
enumset = { version = "1", default-features = false }
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-time = "0.4"
esp-idf-svc = { version = "0.51", default-features = false, features = ["alloc", "embassy-time-driver", "experimental"] }
embedded-svc = { version = "0.28", default-features = false }
rs-matter-stack = { git = "https://github.com/ivmarkov/rs-matter-stack", default-features = false, features = ["rustcrypto"] }
async-io = { version = "=2.0.0", default-features = false } # Workaround for https://github.com/smol-rs/async-lock/issues/84
edge-nal = "0.5"
edge-nal-std = { version = "0.5", default-features = false, optional = true }

[build-dependencies]
embuild = "0.33"

[dev-dependencies]
embassy-time-queue-utils = { version = "0.1", features = ["generic-queue-64"] }
static_cell = "2.1"
anyhow = "1"

[[example]]
name = "light_wifi"
path = "examples/light_wifi.rs"
required-features = ["examples"]

[[example]]
name = "light_thread"
path = "examples/light_thread.rs"
required-features = ["examples"]

[[example]]
name = "light_eth"
path = "examples/light_eth.rs"
required-features = ["examples"]

[[example]]
name = "light_eth2"
path = "examples/light_eth2.rs"
required-features = ["examples"]
